Commit con ejecución exitosa del reporte

--- a/reporte.ipynb
+++ b/reporte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -460,26 +460,47 @@
      "text": [
       "####################################################\n",
       "Iniciando análisis de datos...\n",
-      "No se encontraron archivos válidos para fusionar.\n",
-      "Error: Los siguientes archivos están vacíos y son necesarios para el proceso del reporte.\n",
-      "Archivos faltantes: ['']\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
+      "Todos los archivos son válidos.\n",
+      "Ceros reemplazados por NaN en las columnas: ['Existencia']\n",
+      "Las columnas eliminadas exitosamente: ['ProdConcat', 'TipoProducto']\n",
+      "Archivo Excel generado exitosamente: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx\n",
+      "Las columnas eliminadas exitosamente: ['Almacen']\n",
+      "Columna 'Utilidad' y 'Costo' creada exitosamente.\n",
+      "Las columnas eliminadas exitosamente: ['Almacen']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gibra\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_31444\\2945162042.py:333: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  dfComprasAdjusted[\"Fecha\"] = pd.to_datetime(dfComprasAdjusted[\"Fecha\"]).dt.date\n",
+      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_31444\\2945162042.py:339: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfFiltradoCompras.rename(columns={'Producto': 'ProdConcat'}, inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo Excel generado exitosamente: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n",
+      "['Existencia_638697966959959859.xlsx', 'Excel_Movimientos.xlsx', 'Analisis de Ventas por Tickets_20241215 (1).xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx', 'ComprasCC.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'ExistenciasCC.xlsx', 'PiezasConsumidasCC.xlsx', 'VentasCC.xlsx', 'BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx']\n",
+      "Carpeta creada: .\\BI-DATA-CC_2024-12-23T15-58-28\n",
+      "Archivo movido: Existencia_638697966959959859.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Existencia_638697966959959859.xlsx\n",
+      "Archivo movido: Excel_Movimientos.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Excel_Movimientos.xlsx\n",
+      "Archivo movido: Analisis de Ventas por Tickets_20241215 (1).xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Analisis de Ventas por Tickets_20241215 (1).xlsx\n",
+      "Archivo movido: Excel_Reparaciones_Refacciones_Consumidas.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
+      "Archivo movido: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n",
+      "Archivo movido: ComprasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\ComprasCC.xlsx\n",
+      "El archivo no existe: Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
+      "Archivo movido: ExistenciasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\ExistenciasCC.xlsx\n",
+      "Archivo movido: PiezasConsumidasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\PiezasConsumidasCC.xlsx\n",
+      "Archivo movido: VentasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\VentasCC.xlsx\n",
+      "Archivo movido: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx\n",
+      "El archivo no existe: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n"
      ]
     }
    ],
@@ -576,7 +597,7 @@
     "\n",
     "archivosTrabajados = archivosTrabajados + archivosCompilados + archivosBI\n",
     "print(archivosTrabajados)\n",
-    "mover_archivos_a_carpeta(archivosTrabajados, \"BI-DATA-CC\")"
+    "mover_archivos_a_carpeta(archivosTrabajados, \"BI-DATA-CC\")\n"
    ]
   }
  ],
