Ajuste para evitar registros duplicados en compras
Validación y limpieza de datos en compras

--- a/reporte.ipynb
+++ b/reporte.ipynb
@@ -463,9 +463,7 @@
       "Todos los archivos son válidos.\n",
       "Ceros reemplazados por NaN en las columnas: ['Existencia']\n",
       "Las columnas eliminadas exitosamente: ['ProdConcat', 'TipoProducto']\n",
-      "Archivo Excel generado exitosamente: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx\n",
-      "Las columnas eliminadas exitosamente: ['Almacen']\n",
-      "Columna 'Utilidad' y 'Costo' creada exitosamente.\n",
+      "Archivo Excel generado exitosamente: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx\n",
       "Las columnas eliminadas exitosamente: ['Almacen']\n"
      ]
     },
@@ -473,9 +471,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_31444\\2945162042.py:333: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_12864\\2945162042.py:333: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  dfComprasAdjusted[\"Fecha\"] = pd.to_datetime(dfComprasAdjusted[\"Fecha\"]).dt.date\n",
-      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_31444\\2945162042.py:339: SettingWithCopyWarning: \n",
+      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_12864\\2945162042.py:339: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -486,21 +484,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo Excel generado exitosamente: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n",
-      "['Existencia_638697966959959859.xlsx', 'Excel_Movimientos.xlsx', 'Analisis de Ventas por Tickets_20241215 (1).xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx', 'ComprasCC.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'ExistenciasCC.xlsx', 'PiezasConsumidasCC.xlsx', 'VentasCC.xlsx', 'BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx']\n",
-      "Carpeta creada: .\\BI-DATA-CC_2024-12-23T15-58-28\n",
-      "Archivo movido: Existencia_638697966959959859.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Existencia_638697966959959859.xlsx\n",
-      "Archivo movido: Excel_Movimientos.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Excel_Movimientos.xlsx\n",
-      "Archivo movido: Analisis de Ventas por Tickets_20241215 (1).xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Analisis de Ventas por Tickets_20241215 (1).xlsx\n",
-      "Archivo movido: Excel_Reparaciones_Refacciones_Consumidas.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
-      "Archivo movido: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n",
-      "Archivo movido: ComprasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\ComprasCC.xlsx\n",
+      "Columna 'Utilidad' y 'Costo' creada exitosamente.\n",
+      "Las columnas eliminadas exitosamente: ['Almacen']\n",
+      "Archivo Excel generado exitosamente: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n",
+      "['Existencia_638708376314066722.xlsx', 'Excel_Movimientos.xlsx', 'Analisis de Ventas por Tickets_20241226.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx', 'ComprasCC.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'ExistenciasCC.xlsx', 'PiezasConsumidasCC.xlsx', 'VentasCC.xlsx', 'BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx']\n",
+      "Carpeta creada: .\\BI-DATA-CC_2024-12-26T13-44-51\n",
+      "Archivo movido: Existencia_638708376314066722.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Existencia_638708376314066722.xlsx\n",
+      "Archivo movido: Excel_Movimientos.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Excel_Movimientos.xlsx\n",
+      "Archivo movido: Analisis de Ventas por Tickets_20241226.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Analisis de Ventas por Tickets_20241226.xlsx\n",
+      "Archivo movido: Excel_Reparaciones_Refacciones_Consumidas.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
+      "Archivo movido: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n",
+      "Archivo movido: ComprasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\ComprasCC.xlsx\n",
       "El archivo no existe: Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
-      "Archivo movido: ExistenciasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\ExistenciasCC.xlsx\n",
-      "Archivo movido: PiezasConsumidasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\PiezasConsumidasCC.xlsx\n",
-      "Archivo movido: VentasCC.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\VentasCC.xlsx\n",
-      "Archivo movido: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx -> .\\BI-DATA-CC_2024-12-23T15-58-28\\BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-23T15-58-19.xlsx\n",
-      "El archivo no existe: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-23T15-58-21.xlsx\n"
+      "Archivo movido: ExistenciasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\ExistenciasCC.xlsx\n",
+      "Archivo movido: PiezasConsumidasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\PiezasConsumidasCC.xlsx\n",
+      "Archivo movido: VentasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\VentasCC.xlsx\n",
+      "Archivo movido: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx\n",
+      "El archivo no existe: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n"
      ]
     }
    ],
@@ -561,6 +561,8 @@
     "    \"Producto\": \"ProdConcat\"\n",
     "}, inplace=True)\n",
     "\n",
+    "# Eliminar filas duplicadas considerando todas las columnas\n",
+    "dfPiezasConsumidas.drop_duplicates(inplace=True)\n",
     "\n",
     "\n",
     "# Crea un un Dataframe que contenga los valores de existencias \n",
