--- a/reporte.ipynb
+++ b/reporte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,8 +311,7 @@
     "    dfConcentradoExistencias = dfConcentradoExistencias.groupby([\"Marca\", \"Modelo\", \"Nombre\"]).agg({\n",
     "        'Existencias en Central Cell 20 de noviembre': 'sum',\n",
     "        'Existencias en Central Cell Almacén general': 'sum',\n",
-    "        'Existencias en Central Cell Amapolas': 'sum',\n",
-    "        'Existencias en Central Cell Chedraui': 'sum',\n",
+    "        'Existencias en Central Cell Abastos': 'sum',\n",
     "        'Existencias en Central Cell Fortín': 'sum',\n",
     "        'Existencias en Central Cell Labotienda': 'sum',\n",
     "        'Existencias en Central Cell Nuño del Mercado': 'sum',\n",
@@ -446,64 +445,36 @@
     "        how=\"left\"       # Tipo de merge (inner join)\n",
     "    )\n",
     "\n",
-    "    generar_excel_by_df(dfResultadoFinalBIData, \"BI-EXISTENCIAS-COMPRAS-VENTAS-CC\")\n"
+    "    generar_excel_by_df(dfResultadoFinalBIData, \"BI-EXISTENCIAS-COMPRAS-VENTAS-CC\")\n",
+    "\n",
+    "\n",
+    "def convertir_columna_uppercase(df, columna=\"ProdConcat\"):\n",
+    "    \"\"\"\n",
+    "    Convierte todos los valores de una columna de un DataFrame a mayúsculas.\n",
+    "\n",
+    "    :param df: DataFrame que contiene la columna a transformar.\n",
+    "    :param columna: Nombre de la columna que se desea convertir a mayúsculas. Por defecto, 'ProdConcat'.\n",
+    "    :return: DataFrame con la columna transformada.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        if columna not in df.columns:\n",
+    "            raise ValueError(f\"La columna '{columna}' no existe en el DataFrame.\")\n",
+    "\n",
+    "        # Convertir la columna a mayúsculas\n",
+    "        df[columna] = df[columna].str.upper()\n",
+    "\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al convertir la columna '{columna}' a mayúsculas: {e}\")\n",
+    "        return df\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "####################################################\n",
-      "Iniciando análisis de datos...\n",
-      "Todos los archivos son válidos.\n",
-      "Ceros reemplazados por NaN en las columnas: ['Existencia']\n",
-      "Las columnas eliminadas exitosamente: ['ProdConcat', 'TipoProducto']\n",
-      "Archivo Excel generado exitosamente: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx\n",
-      "Las columnas eliminadas exitosamente: ['Almacen']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_12864\\2945162042.py:333: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  dfComprasAdjusted[\"Fecha\"] = pd.to_datetime(dfComprasAdjusted[\"Fecha\"]).dt.date\n",
-      "C:\\Users\\gibra\\AppData\\Local\\Temp\\ipykernel_12864\\2945162042.py:339: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfFiltradoCompras.rename(columns={'Producto': 'ProdConcat'}, inplace=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columna 'Utilidad' y 'Costo' creada exitosamente.\n",
-      "Las columnas eliminadas exitosamente: ['Almacen']\n",
-      "Archivo Excel generado exitosamente: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n",
-      "['Existencia_638708376314066722.xlsx', 'Excel_Movimientos.xlsx', 'Analisis de Ventas por Tickets_20241226.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx', 'ComprasCC.xlsx', 'Excel_Reparaciones_Refacciones_Consumidas.xlsx', 'ExistenciasCC.xlsx', 'PiezasConsumidasCC.xlsx', 'VentasCC.xlsx', 'BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx', 'BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx']\n",
-      "Carpeta creada: .\\BI-DATA-CC_2024-12-26T13-44-51\n",
-      "Archivo movido: Existencia_638708376314066722.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Existencia_638708376314066722.xlsx\n",
-      "Archivo movido: Excel_Movimientos.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Excel_Movimientos.xlsx\n",
-      "Archivo movido: Analisis de Ventas por Tickets_20241226.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Analisis de Ventas por Tickets_20241226.xlsx\n",
-      "Archivo movido: Excel_Reparaciones_Refacciones_Consumidas.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
-      "Archivo movido: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n",
-      "Archivo movido: ComprasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\ComprasCC.xlsx\n",
-      "El archivo no existe: Excel_Reparaciones_Refacciones_Consumidas.xlsx\n",
-      "Archivo movido: ExistenciasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\ExistenciasCC.xlsx\n",
-      "Archivo movido: PiezasConsumidasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\PiezasConsumidasCC.xlsx\n",
-      "Archivo movido: VentasCC.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\VentasCC.xlsx\n",
-      "Archivo movido: BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx -> .\\BI-DATA-CC_2024-12-26T13-44-51\\BI-CONCENTRADO-EXISTENCIAS-BY-MODELO-MARCA_2024-12-26T13-44-41.xlsx\n",
-      "El archivo no existe: BI-EXISTENCIAS-COMPRAS-VENTAS-CC_2024-12-26T13-44-43.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"####################################################\")\n",
     "print(\"Iniciando análisis de datos...\")\n",
@@ -565,6 +536,11 @@
     "dfPiezasConsumidas.drop_duplicates(inplace=True)\n",
     "\n",
     "\n",
+    "dfVentas = convertir_columna_uppercase(dfVentas, \"ProdConcat\")\n",
+    "dfExistencias = convertir_columna_uppercase(dfExistencias, \"ProdConcat\")\n",
+    "dfPiezasConsumidas = convertir_columna_uppercase(dfPiezasConsumidas, \"ProdConcat\")\n",
+    "dfCompras = convertir_columna_uppercase(dfCompras, \"Producto\")\n",
+    "\n",
     "# Crea un un Dataframe que contenga los valores de existencias \n",
     "# por almacen en forma de columnas y en otra la existencia global\n",
     "dfExistenciasFinal = crearDataframeExistenciaFinal(dfExistencias)\n",
@@ -578,13 +554,13 @@
     "# (en columnas) y una columna con la existencia global total\n",
     "# a su vez, quedan agrupada la ultima compra hecha, junto con la fecha para cada uno de los productos\n",
     "dfExistenciasComprasFinal = creaDataFrameExistenciasComprasFinal(dfExistenciasFinal, dfCompras)\n",
-    "# generar_excel_by_df(dfExistenciasComprasFinal, \"BI-EXISTENCIA-CC\")\n",
+    "generar_excel_by_df(dfExistenciasComprasFinal, \"BI-EXISTENCIA-CC\")\n",
     "\n",
     "# Fusiona los DataFrames de ventas y piezas consumidas, consolidando las \n",
     "# cantidades de productos vendidos por almacén y obteniendo un DataFrame \n",
     "# con el detalle completo de ventas\n",
     "dfVentasFinalMerged = creaDataFrameVentasFinal(dfVentas, dfPiezasConsumidas)\n",
-    "# generar_excel_by_df(dfVentasFinalMerged, \"BI-VENTAS-CC\")\n",
+    "generar_excel_by_df(dfVentasFinalMerged, \"BI-VENTAS-CC\")\n",
     "\n",
     "\n",
     "# Crea un reporte final que integra existencias, compras y ventas, \n",
@@ -619,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
