fix: ajuste de version

--- a/reporte.ipynb
+++ b/reporte.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
     "        'TipoProducto': 'first',\n",
     "        'Modelo': 'first',\n",
     "        'Marca': 'first',\n",
-    "        \"Publico En General\": 'mean'\n",
+    "        \"Publico General\": 'mean'\n",
     "    }).reset_index()\n",
     "    \n",
     "    # Combinar el pivot con los datos adicionales\n",
@@ -347,19 +347,19 @@
     "    #CASI LO FINAL\n",
     "    dfExistenciasComprasFinal =  pd.merge(dfExistenciasFinal, dfFiltradoCompras, on=\"ProdConcat\", how=\"left\")\n",
     "    dfExistenciasComprasFinal.rename(columns={'Existencia': 'Existencia Global', 'Fecha':'Última Fecha Compra', 'Costo':'Precio Compra', 'Cantidad':'Cantidad Comprada Ultimo Mov'}, inplace=True)\n",
-    "    # Verificar si 'Publico En General' es un DataFrame y corregir\n",
-    "    if isinstance(dfExistenciasComprasFinal[\"Publico En General\"], pd.DataFrame):\n",
+    "    # Verificar si 'Publico General' es un DataFrame y corregir\n",
+    "    if isinstance(dfExistenciasComprasFinal[\"Publico General\"], pd.DataFrame):\n",
     "        # Si es un DataFrame, tomar la primera columna válida (ajustar según necesidad)\n",
-    "        dfExistenciasComprasFinal[\"Publico En General\"] = dfExistenciasComprasFinal[\"Publico En General\"].iloc[:, 0]\n",
+    "        dfExistenciasComprasFinal[\"Publico General\"] = dfExistenciasComprasFinal[\"Publico General\"].iloc[:, 0]\n",
     "    # Lista actual de columnas en el DataFrame\n",
     "    columnas_actuales = dfExistenciasComprasFinal.columns.tolist()\n",
     "    # Crear un nuevo orden, asegurando que no se dupliquen columnas\n",
     "    columnas_nuevo_orden = []\n",
     "    for col in columnas_actuales:\n",
-    "        if col != \"Publico En General\" and col != \"Cantidad Comprada Ultimo Mov\":  # Evitar duplicar la columna en su posición original\n",
+    "        if col != \"Publico General\" and col != \"Cantidad Comprada Ultimo Mov\":  # Evitar duplicar la columna en su posición original\n",
     "            columnas_nuevo_orden.append(col)\n",
-    "        if col == \"Precio Compra\":  # Insertar \"Publico En General\" después de \"Precio Compra\"\n",
-    "            columnas_nuevo_orden.append(\"Publico En General\")\n",
+    "        if col == \"Precio Compra\":  # Insertar \"Publico General\" después de \"Precio Compra\"\n",
+    "            columnas_nuevo_orden.append(\"Publico General\")\n",
     "        if col == \"Última Fecha Compra\":\n",
     "            columnas_nuevo_orden.append(\"Cantidad Comprada Ultimo Mov\")\n",
     "    # Reorganizar las columnas del DataFrame\n",
@@ -368,17 +368,17 @@
     "    IVA = .16\n",
     "    CIEN = 100\n",
     "    # Verificar que las columnas sean numéricas y manejar NaN\n",
-    "    if pd.api.types.is_numeric_dtype(dfExistenciasComprasFinal[\"Publico En General\"]) and pd.api.types.is_numeric_dtype(dfExistenciasComprasFinal[\"Precio Compra\"]):\n",
+    "    if pd.api.types.is_numeric_dtype(dfExistenciasComprasFinal[\"Publico General\"]) and pd.api.types.is_numeric_dtype(dfExistenciasComprasFinal[\"Precio Compra\"]):\n",
     "        # Rellenar NaN con 0 para evitar errores durante la resta\n",
-    "        dfExistenciasComprasFinal[\"Publico En General\"] = dfExistenciasComprasFinal[\"Publico En General\"].fillna(0)\n",
+    "        dfExistenciasComprasFinal[\"Publico General\"] = dfExistenciasComprasFinal[\"Publico General\"].fillna(0)\n",
     "        dfExistenciasComprasFinal[\"Precio Compra\"] = dfExistenciasComprasFinal[\"Precio Compra\"].fillna(0)\n",
     "        # Crear la columna 'Utilidad Bruta'\n",
     "        dfExistenciasComprasFinal['Costo'] = dfExistenciasComprasFinal[\"Precio Compra\"]+(dfExistenciasComprasFinal[\"Precio Compra\"]*IVA)\n",
     "        # Crear la columna 'Utilidad Bruta'\n",
-    "        dfExistenciasComprasFinal['Utilidad'] = ((dfExistenciasComprasFinal[\"Publico En General\"]-dfExistenciasComprasFinal['Costo'])/dfExistenciasComprasFinal['Publico En General']) * CIEN\n",
+    "        dfExistenciasComprasFinal['Utilidad'] = ((dfExistenciasComprasFinal[\"Publico General\"]-dfExistenciasComprasFinal['Costo'])/dfExistenciasComprasFinal['Publico General']) * CIEN\n",
     "        print(\"Columna 'Utilidad' y 'Costo' creada exitosamente.\")\n",
     "    else:\n",
-    "        print(\"Error: Las columnas 'Publico En General' y 'Precio Compra' deben ser numéricas.\")\n",
+    "        print(\"Error: Las columnas 'Publico General' y 'Precio Compra' deben ser numéricas.\")\n",
     "    # Lista actual de columnas en el DataFrame\n",
     "    columnas_actuales = dfExistenciasComprasFinal.columns.tolist()\n",
     "    # Crear un nuevo orden, asegurando que no se dupliquen columnas\n",
@@ -509,7 +509,7 @@
     "validar_archivos([existenciasCC, comprasCC, ventasCC, piezasConsumidasCC]) \n",
     "\n",
     "#Qué columnas ocupamos de cada paquete de archivos\n",
-    "columnasExistencias = [\"Almacen\", \"ProdConcat\", \"Existencia\", \"Nombre\", \"TipoProducto\", \"Marca\", \"Modelo\", \"Publico En General\"]\n",
+    "columnasExistencias = [\"Almacen\", \"ProdConcat\", \"Existencia\", \"Nombre\", \"TipoProducto\", \"Marca\", \"Modelo\", \"Publico General\"]\n",
     "columnasCompras = [\"Almacen\", \"Fecha\", \"Producto\", \"Costo\", \"Cantidad\"]\n",
     "columnasVentas = [\"Almacen\", \"ProdConcat\", \"Cantidad\"]\n",
     "columnasPiezasConsumidas = [\"Almacén Salida Reparación\", \"Producto\", \"Cantidad\"]\n",
@@ -533,7 +533,10 @@
     "}, inplace=True)\n",
     "\n",
     "# Eliminar filas duplicadas considerando todas las columnas\n",
-    "dfPiezasConsumidas.drop_duplicates(inplace=True)\n",
+    "# Este paso se comenta debido a que en una versión del reporte que saca plows\n",
+    "# se detectaron piezas consumidas duplicadas por lo que se decidió no eliminar duplicados\n",
+    "# sin embargo parece ser que actualmente esto ya no ocurre\n",
+    "# dfPiezasConsumidas.drop_duplicates(inplace=True)\n",
     "\n",
     "\n",
     "dfVentas = convertir_columna_uppercase(dfVentas, \"ProdConcat\")\n",
@@ -595,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
